# borrow_trait

./: .travis.yml  Cargo.toml  readme.md  rustfmt.toml
.github/workflows/: rust.yml
src/: borrow_ref.rs  borrow_ref_mut.rs  lib.rs  pointers.rs
tests/: trait.rs
